# cli-toolbox

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/: settings.json
.claude/skills/cli-toolbox_publish/: SKILL.md
.claude/skills/e2e-triage/: SKILL.md
.github/workflows/: ci.yml  release.yml
crates/devctl/: Cargo.toml
crates/devctl/src/: config.rs  docker.rs  health.rs  lib.rs  main.rs  state.rs
crates/devctl/src/commands/: doctor.rs  infra.rs  init.rs  local.rs  logs.rs  mod.rs  start.rs  status.rs  stop.rs
crates/tb-backyard/: Cargo.toml  SKILL.md
crates/tb-backyard/src/: api.rs  cache.rs  config.rs  error.rs  friction.rs  lib.rs  main.rs  share.rs  share_alias.rs  types.rs
crates/tb-backyard/tests/: share_alias_orchestration.rs  share_alias_slug_validation.rs
crates/tb-bug/: Cargo.toml  SKILL.md
crates/tb-bug/src/: api.rs  cache.rs  config.rs  error.rs  lib.rs  main.rs  output.rs
crates/tb-bug/src/commands/: config_cmd.rs  doctor.rs  error_action.rs  errors.rs  events.rs  fetch.rs  mod.rs  prime.rs  projects.rs  releases.rs  report.rs  search.rs  stability.rs  trends.rs
crates/tb-devctl/: Cargo.toml  SKILL.md
crates/tb-devctl/src/: aws.rs  config.rs  docker.rs  error.rs  lib.rs  main.rs  state.rs
crates/tb-devctl/src/commands/: doctor.rs  infra.rs  init.rs  local.rs  preset.rs  start.rs  status.rs  stop.rs
crates/tb-lf/: Cargo.toml  SKILL.md
crates/tb-lf/src/: api.rs  cache.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  output.rs  share.rs  share_alias.rs  types.rs
crates/tb-lf/tests/: share_alias_orchestration.rs  share_alias_slug_validation.rs
crates/tb-pr/: Cargo.toml  README.md  SKILL.md  SPEC.md
crates/tb-pr/src/: config.rs  error.rs  lib.rs  main.rs
crates/tb-pr/src/commands/: config_cmd.rs  doctor.rs  list.rs  mod.rs  open.rs  prime.rs  refresh.rs  show.rs  tui.rs  util.rs
crates/tb-pr/src/core/: cache.rs  classifier.rs  github.rs  mod.rs  model.rs  productive.rs  reviews.rs  worktree.rs
crates/tb-pr/src/tui/: app.rs  card.rs  columns.rs  mod.rs
crates/tb-pr/tests/: cli.rs
crates/tb-prod/: Cargo.toml  SKILL.md  schema.json
crates/tb-prod/src/: api.rs  body.rs  cache.rs  config.rs  error.rs  filter.rs  generic_cache.rs  input.rs  json_error.rs  lib.rs  main.rs  output.rs  prosemirror.rs  schema.rs  validate.rs
crates/tb-prod/src/commands/: cache_cmd.rs  config_cmd.rs  doctor.rs  mod.rs  people.rs  prime.rs  project.rs  task.rs  task_batch.rs  task_comment.rs  task_create.rs  task_subscribe.rs  task_update.rs  tasks.rs  todos.rs
crates/tb-prod/src/commands/resource/: action.rs  create.rs  delete.rs  describe.rs  get.rs  mod.rs  query.rs  search.rs  update.rs
crates/tb-prod/src/commands/resource/extensions/: bookings.rs  deals.rs  mod.rs  notifications.rs  pages.rs  people.rs  scenarios.rs  service_types.rs  services.rs  slack.rs  tasks.rs
crates/tb-prod/tests/: deals.rs  errors.rs  pages.rs  people.rs  projects.rs  tasks.rs
crates/tb-prod/tests/cassettes/: deals_filter_status.json  deals_get_one.json  deals_get_page.json  deals_query_services.json  errors_404.json  errors_422.json  errors_delete_404.json  errors_get_all.json  pages_create_child.json  pages_create_delete.json  pages_get_one.json  pages_query_filter.json  pages_update_body.json  pages_update_title.json  people_cache_resolve.json  people_filter_email.json  people_get_one.json  people_get_page.json  projects_404.json  projects_filter_group.json  projects_filter_nested.json  projects_filter_status.json  projects_get_one.json  projects_get_page.json  projects_include_company.json  projects_page_2.json  projects_search.json  projects_sort_name.json  tasks_filter_project.json  tasks_get_one.json  tasks_get_page.json  tasks_search.json  tasks_sort_created.json  tasks_with_includes.json
crates/tb-prod/tests/harness/: mod.rs
crates/tb-sem/: Cargo.toml  SKILL.md
crates/tb-sem/src/: api.rs  config.rs  error.rs  lib.rs  logs.rs  main.rs  output.rs
crates/tb-sem/src/commands/: branches.rs  compare.rs  config_cmd.rs  deploys.rs  doctor.rs  failures.rs  flaky.rs  history.rs  logs.rs  mod.rs  pipeline.rs  prime.rs  promotions.rs  runs.rs  tests.rs  triage.rs  workflow.rs
crates/tb-session/: Cargo.toml  SKILL.md
crates/tb-session/src/: config.rs  error.rs  git.rs  lib.rs  main.rs  models.rs
crates/tb-session/src/commands/: cache_clear.rs  config_cmd.rs  doctor.rs  index_cmd.rs  list.rs  mod.rs  prime.rs  resume.rs  search.rs  show.rs
crates/tb-session/src/index/: builder.rs  mod.rs  parser.rs  scanner.rs  schema.rs
crates/toolbox-core/: Cargo.toml
crates/toolbox-core/src/: cache.rs  config.rs  error.rs  lib.rs  output.rs  prompt.rs  skill.rs  time_range.rs  uninstall.rs  version_check.rs
docs/: cli-toolbox-scaffold.md  lfi-v2-implementation.md  lfi-v2.md
docs/exporation/: bugsnag-cli-needs.md  productive-cli-needs.md
docs/features/build-ci-pipeline/: idea.md  plan.md  research.md  spec.md  status.md
docs/features/langfuse-insights/: idea.md  plan.md  research.md  spec.md  status.md
docs/features/refactor-tb-prod-commands/: idea.md  plan.md  research.md  spec.md  status.md
docs/features/tb-lf-improvements/: idea.md  plan.md  spec.md  status.md
docs/features/tb-sem-branch-filtering/: idea.md  plan.md  research.md  spec.md  status.md
output/features/rename-devctl-to-tb-devctl/: idea.md  plan.md  research.md  spec.md  status.md
scripts/: benchmark-mcp-vs-cli.sh  bump.sh  install.sh
