[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Tibor Rogulja"]
license = "MIT"
repository = "https://github.com/productiveio/cli-toolbox"

[workspace.dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

# Async + HTTP
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.13", features = ["json"] }
reqwest-middleware = { version = "0.5", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Output
colored = "3.0"
indicatif = "0.18"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Interactive prompts
inquire = "0.7"

# Database
rusqlite = { version = "0.38", features = ["bundled", "modern_sqlite"] }

# Error handling
thiserror = "2.0"

# Internal
toolbox-core = { path = "crates/toolbox-core" }
tb-lf = { path = "crates/tb-lf" }
tb-sem = { path = "crates/tb-sem" }
tb-prod = { path = "crates/tb-prod" }
tb-bug = { path = "crates/tb-bug" }
tb-devctl = { path = "crates/tb-devctl" }
tb-session = { path = "crates/tb-session" }
tb-pr = { path = "crates/tb-pr" }

# Dev/test (also in workspace.dependencies so crates can inherit them)
assert_cmd = "2"
predicates = "3"
tempfile = "3"
http = "1.3"
rvcr = { git = "https://github.com/robert-sjoblom/rvcr", branch = "main" }
