[package]
name = "devctl"
version = "0.1.0"
edition = "2024"
description = "Local dev environment orchestrator for Productive services"
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "devctl"
path = "src/main.rs"

[lib]
doctest = false

[dependencies]
toolbox-core.workspace = true
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true
colored.workspace = true
dirs = "6"
thiserror.workspace = true
