[package]
name = "tb-bug"
version = "0.1.0"
edition = "2024"
description = "Bugsnag insights CLI"

[[bin]]
name = "tb-bug"
path = "src/main.rs"

[lib]
doctest = false

[dependencies]
toolbox-core.workspace = true
clap.workspace = true
clap_complete.workspace = true
tokio.workspace = true
reqwest.workspace = true
reqwest-middleware.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true
colored.workspace = true
indicatif.workspace = true
rusqlite.workspace = true
thiserror.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
http.workspace = true
rvcr.workspace = true
