[package]
name = "tb-bug"
version = "0.1.1"
edition = "2024"
description = "Bugsnag insights CLI"

[[bin]]
name = "tb-bug"
path = "src/main.rs"

[lib]
doctest = false

[dependencies]
toolbox-core = { workspace = true, features = ["cache", "version-check"] }
clap.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true
thiserror.workspace = true
colored.workspace = true

# tb-bug-specific deps
urlencoding = "2.1"

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
http.workspace = true
rvcr.workspace = true
