[package]
name = "tb-lf"
version = "0.1.0"
edition = "2024"
description = "Langfuse insights CLI — devportal-backed"

[[bin]]
name = "tb-lf"
path = "src/main.rs"

[lib]
doctest = false

[dependencies]
clap.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true
colored.workspace = true
thiserror.workspace = true
dirs = "6"
