[package]
name = "tb-lf"
version = "0.2.2"
edition = "2024"
description = "Langfuse insights CLI — devportal-backed"
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "tb-lf"
path = "src/main.rs"

[lib]
doctest = false

[dependencies]
toolbox-core = { workspace = true, features = ["cache", "prompt", "version-check"] }
clap.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true
colored.workspace = true
thiserror.workspace = true
