[package]
name = "tb-pr"
version = "0.1.0"
edition = "2024"
description = "GitHub PR radar — kanban TUI + CLI for the Productive org"
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "tb-pr"
path = "src/main.rs"

[lib]
doctest = false

[dependencies]
toolbox-core = { workspace = true, features = ["version-check", "cache"] }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
colored.workspace = true
toml.workspace = true
tokio.workspace = true
reqwest.workspace = true
chrono.workspace = true
regex = "1"
dirs = "6"

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
