[package]
name = "tb-prod"
version = "0.1.10"
edition = "2024"
description = "Productive.io API CLI"
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "tb-prod"
path = "src/main.rs"

[lib]
doctest = false

[dependencies]
toolbox-core = { workspace = true, features = ["prompt", "version-check"] }
clap.workspace = true
clap_complete.workspace = true
tokio.workspace = true
reqwest.workspace = true
reqwest-middleware.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true
colored.workspace = true
thiserror.workspace = true

# tb-prod-specific deps
comrak = { version = "0.36", default-features = false, features = ["shortcodes"] }
dirs = "6"
urlencoding = "2"

[dev-dependencies]
http.workspace = true
rvcr.workspace = true
tempfile.workspace = true
