[package]
name = "tb-sem"
version = "0.1.6"
edition = "2024"
description = "Semaphore CI insights CLI"

[[bin]]
name = "tb-sem"
path = "src/main.rs"

[lib]
doctest = false

[dependencies]
toolbox-core = { workspace = true, features = ["prompt", "version-check"] }
clap.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true
thiserror.workspace = true
colored.workspace = true

# tb-sem-specific deps
chrono-tz = "0.10"
dirs = "6"
regex = "1"
iana-time-zone = "0.1"

[dev-dependencies]
http.workspace = true
rvcr.workspace = true
