[package]
name = "toolbox-core"
version = "0.1.0"
edition = "2024"
description = "Shared infrastructure for cli-toolbox crates"

[lib]
doctest = false

[dependencies]
clap.workspace = true
tokio.workspace = true
reqwest.workspace = true
reqwest-middleware.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true
colored.workspace = true
indicatif.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
