[package]
name = "toolbox-core"
version = "0.1.0"
edition = "2024"
description = "Shared infrastructure for cli-toolbox crates"

[lib]
doctest = false

[features]
default = []
cache = []
version-check = []

[dependencies]
clap.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true
reqwest.workspace = true
colored.workspace = true
dirs = "6"
